<resources>
    <string name="app_name">iSpeed</string>
    <string name="COLLECTION_USER_INFORMATION">User Information</string>
    <string name="FIRSTNAME">First Name</string>
    <string name="LASTNAME">Last Name</string>
    <string name="USERNAME">Username</string>
    <string name="INSTITUTION">Institution</string>
    <string name="USER_ID">User_Id</string>
    <string name="USERPREF">User Session</string>
    <string name="BTNPREF">Button Session</string>
    <string name="user_location_permission_not_granted">Permission Not granted</string>
    <string name="user_location_permission_explanation">You need to allow iSpeed to access your location</string>
    <string name="mapbox_maps_api_key" templateMergeStrategy="preserve" translatable="false">pk.eyJ1IjoicGF5YXRob3VnaHQiLCJhIjoiY2p4MWc3aG03MDhxZTRhcGs2dHY1ZzlvMyJ9.zJcgxg3J-qhfnd12NSX6ow</string>

    <string name="COLLECTION_INTERNET_SPEED_DATA">Internet Speed Info</string>
    <string name="logout">logout</string>
    <string name="GeoContainer" />

    <!--Track Internet-->
    <string name="track_internet_button_export">Export</string>
    <string name="track_internet_automatic_tracking">Automatic Tracking</string>
    <string name="tracking_internet_start_time">Start time:</string>
    <string name="track_internet_select_date">Select Date</string>
    <string name="track_internet_end_time">End time:</string>
    <string name="track_internet_click_here">Click Here</string>
    <string name="track_internet_button_start">Start</string>
    <string name="track_internet_button_stop">Stop</string>
    <string name="track_internet_time">Time</string>
    <string name="track_internet_status">Status</string>
</resources>